2016-02-17 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added home department code (ucdAppointmentDepartmentCode) to LDAP response

2015-12-09 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Implemented GitHub support via project_tag/issue_number, e.g. dw/232

2015-11-02 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Implemented feature on/off switches to allow UCD AggieBot and DSS AutoBot
    to share a codebase.

2015-10-13 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Ignore messages sent by self
  * Fix for using two types of SysAid ticket number identification

2015-09-24 Christopher Thielen <cmthielen@ucdavis.edu>:
  * LDAP queries with multiple words but no known commands now
    perform a CN=*term1*term2* -style search

2015-09-18 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added 'Good morning' responses
  * Added 'roles <loginid>' command to query Roles Management

2015-09-08 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added LDAP attribute-specific search. Idea credit: Bill Broadley

2015-09-04 Christopher Thielen <cmthielen@ucdavis.edu>:
	* Converted from HipChat to Slack (uh oh)

2015-08-06 Christopher Thielen <cmthielen@ucdavis.edu>:
	* Enabled global integration installation.
	* Bumped verison to 0.2.
	* Added the ability to query SysAid by typing a pound (#) followed by digits
	  anywhere in a message.

2015-05-14 Christopher Thielen <cmthielen@ucdavis.edu>:
	* Turn off notifications for ChatBot replies

2014-11-13 Christopher Thielen <cmthielen@ucdavis.edu>:
	* Began project (according to comment in dss-chatbot.rb)